--- a/kavyaresume.html
+++ b/kavyaresume.html
@@ -24,7 +24,7 @@
     
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container">
-          <img src="https://kavyaganesan.w3spaces.com/IMG_6158.jpg" style="width:100%" alt="Avatar">
+          <img src="https://github.com/vishalganesh123/hello-world/blob/master/images/KavyaPhoto_1.jpg" style="width:100%" alt="Avatar">
           <div class="w3-display-bottomleft w3-container w3-text-white">
             <h2 >Kavya Ganesan</h2>
           </div>
