--- a/kavyaresume.html
+++ b/kavyaresume.html
@@ -93,7 +93,7 @@
       </div>
     <!--Resume-->
       <div class="w3-container w3-card w3-white w3-margin-bottom">
-        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></></i>Resume</h2>
+        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></></i> <a href="https://github.com/vishalganesh123/hello-world/blob/master/FinalHighschoolResume.htm">Resume</a></h2>
         <div class="w3-container">
         </div>
       </div>
