--- a/FinalHighschoolResume.htm
+++ b/FinalHighschoolResume.htm
@@ -5,7 +5,7 @@ xmlns:m="http://schemas.microsoft.com/office/2004/12/omml"
 xmlns="http://www.w3.org/TR/REC-html40">
 
 <head>
-<meta http-equiv=Content-Type content="text/html; charset=windows-1252">
+<meta http-equiv=Content-Type content="text/html; charset=UTF-8">
 <meta name=ProgId content=Word.Document>
 <meta name=Generator content="Microsoft Word 15">
 <meta name=Originator content="Microsoft Word 15">
@@ -1110,7 +1110,7 @@ table.MsoTableGrid
 <p class=MsoNormal align=right style='margin-bottom:0cm;margin-bottom:.0001pt;
 text-align:left'><span lang=EN-US style='font-size:20.0pt;line-height:107%;
 font-family:"Times New Roman","serif";mso-fareast-font-family:"Times New Roman";
-color:black;mso-themecolor:text1'>Kavya Ganesan<span style='mso-tab-count:7'>                                            </span></span>
+color:black;mso-themecolor:text1'>Kavya Ganesan<span style='mso-tab-count:7'>Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â  </span></span>
 </p>
 
 <p class=MsoNormal align=right style='margin-bottom:0cm;margin-bottom:.0001pt;
@@ -1148,7 +1148,7 @@ lang=EN-US><o:p>&nbsp;</o:p></span></p>
 <p class=MsoNormal><span lang=EN-US style='font-size:16.0pt;line-height:107%;
 font-family:"Times New Roman","serif";mso-fareast-font-family:"Times New Roman";
 color:black;mso-themecolor:text1'>Objective</span><span lang=EN-US><span
-style='mso-tab-count:12'>                                                                                                                                                                                     </span></span><span
+style='mso-tab-count:12'>Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â Â  </span></span><span
 lang=EN-US style='font-size:16.0pt;line-height:107%;font-family:"Times New Roman","serif";
 mso-fareast-font-family:"Times New Roman";color:black;mso-themecolor:text1'><o:p></o:p></span></p>
 
@@ -1171,7 +1171,7 @@ lang=EN-US style='font-size:16.0pt;line-height:107%;font-family:"Times New Roman
 auto;text-indent:-18.0pt;mso-list:l1 level1 lfo2'><![if !supportLists]><span
 lang=EN-US style='font-size:12.0pt;line-height:107%;font-family:Wingdings;
 mso-fareast-font-family:Wingdings;mso-bidi-font-family:Wingdings;color:black;
-mso-themecolor:text1'><span style='mso-list:Ignore'>Ø<span style='font:7.0pt "Times New Roman"'>&nbsp;
+mso-themecolor:text1'><span style='mso-list:Ignore'>Ã˜<span style='font:7.0pt "Times New Roman"'>&nbsp;
 </span></span></span><![endif]><span lang=EN-US style='font-size:12.0pt;
 line-height:107%;font-family:"Times New Roman","serif";mso-fareast-font-family:
 "Times New Roman";color:black;mso-themecolor:text1'>I have achieved 12
@@ -1184,7 +1184,7 @@ style='mso-special-character:line-break'>
 auto;text-indent:-18.0pt;mso-list:l1 level1 lfo2'><![if !supportLists]><span
 lang=EN-US style='font-size:12.0pt;line-height:107%;font-family:Wingdings;
 mso-fareast-font-family:Wingdings;mso-bidi-font-family:Wingdings;color:black;
-mso-themecolor:text1'><span style='mso-list:Ignore'>Ø<span style='font:7.0pt "Times New Roman"'>&nbsp;
+mso-themecolor:text1'><span style='mso-list:Ignore'>Ã˜<span style='font:7.0pt "Times New Roman"'>&nbsp;
 </span></span></span><![endif]><span lang=EN-US style='font-size:12.0pt;
 line-height:107%;font-family:"Times New Roman","serif";mso-fareast-font-family:
 "Times New Roman";color:black;mso-themecolor:text1'>I have participated in 7
@@ -1197,13 +1197,13 @@ for a famous YouTube channel. <br style='mso-special-character:line-break'>
 auto;text-indent:-18.0pt;mso-list:l1 level1 lfo2'><![if !supportLists]><span
 lang=EN-US style='font-size:12.0pt;line-height:107%;font-family:Wingdings;
 mso-fareast-font-family:Wingdings;mso-bidi-font-family:Wingdings;color:black;
-mso-themecolor:text1'><span style='mso-list:Ignore'>Ø<span style='font:7.0pt "Times New Roman"'>&nbsp;
+mso-themecolor:text1'><span style='mso-list:Ignore'>Ã˜<span style='font:7.0pt "Times New Roman"'>&nbsp;
 </span></span></span><![endif]><span lang=EN-US style='font-size:12.0pt;
 line-height:107%;font-family:"Times New Roman","serif";mso-fareast-font-family:
 "Times New Roman";color:black;mso-themecolor:text1'>I have accumulated 24
 Extracurricular Activities and have achieved awards such as <i
 style='mso-bidi-font-style:normal'>Guinness World Record, Asian Book of
-Record,<span style='mso-spacerun:yes'>  </span>Scholar Athlete Award, Tamil
+Record,<span style='mso-spacerun:yes'>Â  </span>Scholar Athlete Award, Tamil
 Talent Show Award<br style='mso-special-character:line-break'>
 <![if !supportLineBreakNewLine]><br style='mso-special-character:line-break'>
 <![endif]></i><o:p></o:p></span></p>
@@ -1212,7 +1212,7 @@ Talent Show Award<br style='mso-special-character:line-break'>
 auto;text-indent:-18.0pt;mso-list:l1 level1 lfo2'><![if !supportLists]><span
 lang=EN-US style='font-size:14.0pt;mso-bidi-font-size:12.0pt;line-height:107%;
 font-family:Wingdings;mso-fareast-font-family:Wingdings;mso-bidi-font-family:
-Wingdings;color:black;mso-themecolor:text1'><span style='mso-list:Ignore'>Ø<span
+Wingdings;color:black;mso-themecolor:text1'><span style='mso-list:Ignore'>Ã˜<span
 style='font:7.0pt "Times New Roman"'> </span></span></span><![endif]><span
 lang=EN-US style='font-size:12.0pt;line-height:107%;font-family:"Times New Roman","serif";
 mso-fareast-font-family:"Times New Roman";color:black;mso-themecolor:text1'>I
@@ -1227,7 +1227,7 @@ mso-themecolor:text1'><br style='mso-special-character:line-break'>
 auto;text-indent:-18.0pt;mso-list:l1 level1 lfo2'><![if !supportLists]><span
 lang=EN-US style='font-size:14.0pt;mso-bidi-font-size:12.0pt;line-height:107%;
 font-family:Wingdings;mso-fareast-font-family:Wingdings;mso-bidi-font-family:
-Wingdings;color:black;mso-themecolor:text1'><span style='mso-list:Ignore'>Ø<span
+Wingdings;color:black;mso-themecolor:text1'><span style='mso-list:Ignore'>Ã˜<span
 style='font:7.0pt "Times New Roman"'> </span></span></span><![endif]><span
 lang=EN-US style='font-size:12.0pt;line-height:107%;font-family:"Times New Roman","serif";
 mso-fareast-font-family:"Times New Roman";color:black;mso-themecolor:text1'>I
@@ -1249,7 +1249,7 @@ line-break'>
 auto;text-indent:-18.0pt;mso-list:l1 level1 lfo2'><![if !supportLists]><span
 lang=EN-US style='font-size:12.0pt;line-height:107%;font-family:Wingdings;
 mso-fareast-font-family:Wingdings;mso-bidi-font-family:Wingdings;color:black;
-mso-themecolor:text1'><span style='mso-list:Ignore'>Ø<span style='font:7.0pt "Times New Roman"'>&nbsp;
+mso-themecolor:text1'><span style='mso-list:Ignore'>Ã˜<span style='font:7.0pt "Times New Roman"'>&nbsp;
 </span></span></span><![endif]><span lang=EN-US style='font-size:12.0pt;
 mso-bidi-font-size:11.0pt;line-height:107%;font-family:"Times New Roman","serif";
 mso-fareast-font-family:"Times New Roman"'>I have been nominated for <b
@@ -1266,7 +1266,7 @@ color:black;mso-themecolor:text1'><o:p></o:p></span></p>
 auto;text-indent:-18.0pt;mso-list:l1 level1 lfo2'><![if !supportLists]><span
 lang=EN-US style='font-size:14.0pt;mso-bidi-font-size:12.0pt;line-height:107%;
 font-family:Wingdings;mso-fareast-font-family:Wingdings;mso-bidi-font-family:
-Wingdings;color:black;mso-themecolor:text1'><span style='mso-list:Ignore'>Ø<span
+Wingdings;color:black;mso-themecolor:text1'><span style='mso-list:Ignore'>Ã˜<span
 style='font:7.0pt "Times New Roman"'> </span></span></span><![endif]><span
 lang=EN-US style='font-size:12.0pt;mso-bidi-font-size:11.0pt;line-height:107%;
 font-family:"Times New Roman","serif";mso-fareast-font-family:"Times New Roman"'>I
@@ -1282,7 +1282,7 @@ school. <br style='mso-special-character:line-break'>
 auto;text-indent:-18.0pt;mso-list:l1 level1 lfo2'><![if !supportLists]><span
 lang=EN-US style='font-size:14.0pt;mso-bidi-font-size:12.0pt;line-height:107%;
 font-family:Wingdings;mso-fareast-font-family:Wingdings;mso-bidi-font-family:
-Wingdings;color:black;mso-themecolor:text1'><span style='mso-list:Ignore'>Ø<span
+Wingdings;color:black;mso-themecolor:text1'><span style='mso-list:Ignore'>Ã˜<span
 style='font:7.0pt "Times New Roman"'> </span></span></span><![endif]><span
 lang=EN-US style='font-size:12.0pt;mso-bidi-font-size:11.0pt;line-height:107%;
 font-family:"Times New Roman","serif";mso-fareast-font-family:"Times New Roman"'>I
@@ -1298,12 +1298,12 @@ Chicago for about an hour. <br style='mso-special-character:line-break'>
 auto;text-indent:-18.0pt;mso-list:l1 level1 lfo2'><![if !supportLists]><span
 lang=EN-US style='font-size:14.0pt;mso-bidi-font-size:12.0pt;line-height:107%;
 font-family:Wingdings;mso-fareast-font-family:Wingdings;mso-bidi-font-family:
-Wingdings;color:black;mso-themecolor:text1'><span style='mso-list:Ignore'>Ø<span
+Wingdings;color:black;mso-themecolor:text1'><span style='mso-list:Ignore'>Ã˜<span
 style='font:7.0pt "Times New Roman"'> </span></span></span><![endif]><span
 lang=EN-US style='font-size:12.0pt;mso-bidi-font-size:11.0pt;line-height:107%;
 font-family:"Times New Roman","serif";mso-fareast-font-family:"Times New Roman"'>I
 have learned classical Bharatanatyam dance for about 5 years and have completed
-the “Salangai Pooja” ( First level )<span style='mso-spacerun:yes'>  </span>and
+the Â“Salangai PoojaÂ” ( First level )<span style='mso-spacerun:yes'>Â  </span>and
 practicing for the second level. <br style='mso-special-character:line-break'>
 <![if !supportLineBreakNewLine]><br style='mso-special-character:line-break'>
 <![endif]></span><span lang=EN-US style='font-size:14.0pt;mso-bidi-font-size:
@@ -1314,7 +1314,7 @@ practicing for the second level. <br style='mso-special-character:line-break'>
 auto;text-indent:-18.0pt;mso-list:l1 level1 lfo2'><![if !supportLists]><span
 lang=EN-US style='font-size:14.0pt;mso-bidi-font-size:12.0pt;line-height:107%;
 font-family:Wingdings;mso-fareast-font-family:Wingdings;mso-bidi-font-family:
-Wingdings;color:black;mso-themecolor:text1'><span style='mso-list:Ignore'>Ø<span
+Wingdings;color:black;mso-themecolor:text1'><span style='mso-list:Ignore'>Ã˜<span
 style='font:7.0pt "Times New Roman"'> </span></span></span><![endif]><span
 lang=EN-US style='font-size:12.0pt;mso-bidi-font-size:11.0pt;line-height:107%;
 font-family:"Times New Roman","serif";mso-fareast-font-family:"Times New Roman"'>I
@@ -1368,7 +1368,7 @@ mso-fareast-font-family:"Times New Roman";color:black;mso-themecolor:text1'><o:p
   height:15.0pt'>
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
   normal'><span lang=EN-US style='font-family:"Times New Roman","serif";
-  mso-fareast-font-family:"Times New Roman"'><span style='mso-spacerun:yes'>   
+  mso-fareast-font-family:"Times New Roman"'><span style='mso-spacerun:yes'>Â Â Â 
   </span><o:p></o:p></span></p>
   </td>
   <td width=208 valign=top style='width:156.0pt;border:none;border-bottom:solid black 1.0pt;
@@ -1382,7 +1382,7 @@ mso-fareast-font-family:"Times New Roman";color:black;mso-themecolor:text1'><o:p
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
   normal'><b><span lang=EN-US style='font-family:"Times New Roman","serif";
   mso-fareast-font-family:"Times New Roman"'>Honors Achievement <a
-  name="_Int_U1cb2yBh">Award<span style='mso-spacerun:yes'>  </span></a></span></b><span
+  name="_Int_U1cb2yBh">Award<span style='mso-spacerun:yes'>Â  </span></a></span></b><span
   style='mso-bookmark:_Int_U1cb2yBh'><span lang=EN-US style='font-family:"Times New Roman","serif";
   mso-fareast-font-family:"Times New Roman"'>Grade</span></span><span
   lang=EN-US style='font-family:"Times New Roman","serif";mso-fareast-font-family:
@@ -1853,13 +1853,13 @@ mso-fareast-font-family:"Times New Roman";color:black;mso-themecolor:text1'><o:p
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
   normal'><b><span lang=EN-US style='font-family:"Times New Roman","serif";
   mso-fareast-font-family:"Times New Roman"'>Tamil Malar Mandram<a
-  name="_Int_M7Klq8f1"><span style='mso-spacerun:yes'>   </span>(</a>Tamil school)<o:p></o:p></span></b></p>
+  name="_Int_M7Klq8f1"><span style='mso-spacerun:yes'>Â Â  </span>(</a>Tamil school)<o:p></o:p></span></b></p>
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
   normal'><span lang=EN-US style='font-family:"Times New Roman","serif";
   mso-fareast-font-family:"Times New Roman"'>Grade 9<b><o:p></o:p></b></span></p>
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
   normal'><span lang=EN-US style='font-family:"Times New Roman","serif";
-  mso-fareast-font-family:"Times New Roman"'>Sep 2021 – May2022<o:p></o:p></span></p>
+  mso-fareast-font-family:"Times New Roman"'>Sep 2021 Â– May2022<o:p></o:p></span></p>
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
   normal'><span lang=EN-US style='font-family:"Times New Roman","serif";
   mso-fareast-font-family:"Times New Roman"'>50 Hours<o:p></o:p></span></p>
@@ -1949,7 +1949,7 @@ mso-fareast-font-family:"Times New Roman";color:black;mso-themecolor:text1'><o:p
   mso-fareast-font-family:"Times New Roman"'>Grade 9<b><o:p></o:p></b></span></p>
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
   normal'><span lang=EN-US style='font-family:"Times New Roman","serif";
-  mso-fareast-font-family:"Times New Roman"'>Nov 24,2020 – Nov 28,2020<o:p></o:p></span></p>
+  mso-fareast-font-family:"Times New Roman"'>Nov 24,2020 Â– Nov 28,2020<o:p></o:p></span></p>
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
   normal'><span lang=EN-US style='font-family:"Times New Roman","serif";
   mso-fareast-font-family:"Times New Roman"'>26 Hours<o:p></o:p></span></p>
@@ -2013,7 +2013,7 @@ mso-fareast-font-family:"Times New Roman";color:black;mso-themecolor:text1'><o:p
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
   normal'><span lang=EN-US style='font-family:"Times New Roman","serif";
   mso-fareast-font-family:"Times New Roman"'>Volunteered as interviewer for
-  Tamerica Tv’s Golu festival broadcast<o:p></o:p></span></p>
+  Tamerica TvÂ’s Golu festival broadcast<o:p></o:p></span></p>
   </td>
  </tr>
  <tr style='mso-yfti-irow:16;height:15.0pt'>
@@ -2358,7 +2358,7 @@ mso-fareast-font-family:"Times New Roman";color:black;mso-themecolor:text1'><o:p
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
   normal'><b><span lang=EN-US style='font-family:"Times New Roman","serif";
   mso-fareast-font-family:"Times New Roman"'>Certificate of Participation<span
-  style='mso-spacerun:yes'>  </span></span></b><span lang=EN-US
+  style='mso-spacerun:yes'>Â  </span></span></b><span lang=EN-US
   style='font-family:"Times New Roman","serif";mso-fareast-font-family:"Times New Roman"'><o:p></o:p></span></p>
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
   normal'><span lang=EN-US style='font-family:"Times New Roman","serif";
@@ -2402,7 +2402,7 @@ mso-fareast-font-family:"Times New Roman";color:black;mso-themecolor:text1'><o:p
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
   normal'><b><span lang=EN-US style='font-family:"Times New Roman","serif";
   mso-fareast-font-family:"Times New Roman"'>Most Improved<span
-  style='mso-spacerun:yes'>  </span></span></b><span lang=EN-US
+  style='mso-spacerun:yes'>Â  </span></span></b><span lang=EN-US
   style='font-family:"Times New Roman","serif";mso-fareast-font-family:"Times New Roman"'><o:p></o:p></span></p>
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
   normal'><span lang=EN-US style='font-family:"Times New Roman","serif";
@@ -2514,8 +2514,8 @@ mso-fareast-font-family:"Times New Roman";color:black;mso-themecolor:text1'><o:p
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
   normal'><span lang=EN-US style='font-family:"Times New Roman","serif";
   mso-fareast-font-family:"Times New Roman"'>Recognized for participating in
-  the “Thamizhodu Vilayadu – Tamil talent show” presented by NEOTS<span
-  style='mso-spacerun:yes'>  </span><o:p></o:p></span></p>
+  the Â“Thamizhodu Vilayadu Â– Tamil talent showÂ” presented by NEOTS<span
+  style='mso-spacerun:yes'>Â  </span><o:p></o:p></span></p>
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
   normal'><span lang=EN-US style='font-family:"Times New Roman","serif";
   mso-fareast-font-family:"Times New Roman"'><o:p>&nbsp;</o:p></span></p>
@@ -2692,8 +2692,8 @@ mso-fareast-font-family:"Times New Roman";color:black;mso-themecolor:text1'><o:p
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
   normal'><span lang=EN-US style='font-family:"Times New Roman","serif";
   mso-fareast-font-family:"Times New Roman"'>Recognized for participating in
-  the “Thamizhodu Vilayadu – Tamil talent show” presented by NEOTS<span
-  style='mso-spacerun:yes'>  </span><o:p></o:p></span></p>
+  the Â“Thamizhodu Vilayadu Â– Tamil talent showÂ” presented by NEOTS<span
+  style='mso-spacerun:yes'>Â  </span><o:p></o:p></span></p>
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
   normal'><span lang=EN-US style='font-family:"Times New Roman","serif";
   mso-fareast-font-family:"Times New Roman"'><o:p>&nbsp;</o:p></span></p>
